2000-05-15  Russell Steinthal  <rms39@columbia.edu>

	* gnome-pilot.m4 (PILOT_LIBS): An attempt to fix the gnome-pilot
	check on Solaris (`$GNOME_CONFIG ...` returns more than one word,
	so we need quotes around it to keep test from bombing out)

2000-05-01  Dan Winship  <danw@helixcode.com>

	* gnome-pilot.m4 (PILOT_LIBS): "But that trick NEVER works!"
	"This time for sure!"

Sun Apr 23 12:15:14 2000  George Lebl <jirka@5z.com>

	* gnome.m4: add an extra lib of docklets.  These checks are
	  braindamaged though, they don't fail and thus gnome-core for
	  example compiles without gnomecc.  There need to be separate .m4
	  files or checks

2000-04-19  Eskil Heyn Olsen  <deity@eskil.dk>

	* gnome-pilot.m4 (PILOT_LIBS): Changed the error string for gnome-pilot
	(PILOT_LIBS): Fixes the gnome-config check

2000-04-10  Dan Winship  <danw@helixcode.com>

	* gnome-pilot.m4 (PILOT_LIBS): Fix a bug introduced in the
	gnome-pilot-config to "gnome-config gpilot" change that caused not
	having pilot-link installed to become a fatal error.

2000-02-26  James Henstridge  <james@daa.com.au>

	* gnome-gettext.m4: fix up check of LINGUAS variable so that we don't
	get problems when LINGUAS contains `en' and ALL_LINGUAS contains
	`en_GB' for instance.

2000-02-22  Martin Baulig  <martin@home-of-linux.org>

	* autogen.sh: Don't run libtoolize when `NO_LIBTOOLIZE' is set.

2000-02-09  Raja R Harinath  <harinath@cs.umn.edu>

	* autogen.sh: Fix GNUism introduced in the previous fix.

2000-02-08  Miguel de Icaza  <miguel@gnu.org>

	* autogen.sh: Handle non GNU find programs. 

2000-02-05  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-types.m4 (AC_LIBGTOP_CHECK_TYPE): New macro. This
	is an improved version of AC_CHECK_TYPE which takes into account
	that we need to #include some other header files on some systems
	to get some types.
	(GNOME_LIBGTOP_TYPES): Check for <sys/bitypes.h> for Tru64 and
	use AC_LIBGTOP_CHECK_TYPE rather than AC_CHECK_TYPE.
