@@ -24,18 +24,20 @@ MACROS=						\
   linger.m4					\
   need-declaration.m4
 
-EXTRA_DIST=$(MACROS) gnome-common.m4 autogen.sh
+EXTRA_DIST=$(MACROS) gnome-common.m4 autogen.sh gnome-autogen.sh
 MAINTAINERCLEANFILES=macros.dep
 
 @MAINT@macros.dep: Makefile.am
 @MAINT@	@echo '$$(top_srcdir)/aclocal.m4: $(MACROS:%=macros/%)' > $@
 
 if INSIDE_GNOME_COMMON
-gnome_aclocaldir = $(datadir)/aclocal/gnome
+gnome_aclocaldir = $(datadir)/aclocal/gnome-macros
 
 gnome-macros.dep: Makefile.am
 	@echo '$$(top_srcdir)/aclocal.m4: $(MACROS:%=$(gnome_aclocaldir)/%)' > $@
 
 gnome_aclocal_DATA = $(MACROS) gnome-macros.dep gnome-common.m4 autogen.sh
+
+bin_SCRIPTS = gnome-autogen.sh
 
 endif
